Modified Home page

--- a/home.html
+++ b/home.html
@@ -1,6 +1,19 @@
 <html>
     <head><title>home page</title></head>
-    <body>
-        home page
+        <style>
+            .crt{
+                color: brown);
+            }
+           .heading{
+               color: hsl(0, 39%, 19%);
+           }
+        </style>
+        <body >
+            <h1 tatile="heading one">home page</h1>
+           <p>page one</p> 
+           <h2 id="heading">countries</h2>
+               <h3 class="crt">Ehiopia</h3>
+                <h3 class="crt">Ertiria</h3>
+                <h3 class="crt">kenya</h3>
     </body>
 </html>
