--- a/home.html
+++ b/home.html
@@ -2,14 +2,15 @@
     <head><title>home page</title></head>
         <style>
             .crt{
-                color: brown);
+                color: brown;
             }
            .heading{
                color: hsl(0, 39%, 19%);
            }
         </style>
         <body >
-            <h1 tatile="heading one">home page</h1>
+            <a href="about.html">About Us</a>
+            <h1 tatile="heading one">Home Page</h1>
            <p>page one</p> 
            <h2 id="heading">countries</h2>
                <h3 class="crt">Ehiopia</h3>
