With Some Modification

--- a/home.html
+++ b/home.html
@@ -11,8 +11,9 @@
         <body >
             <a href="about.html">About Us</a>
             <h1 tatile="heading one">Home Page</h1>
-           <p>page one</p> 
-           <h2 id="heading">countries</h2>
+           <p>page one</p>
+           <H1 style="text-align:center">The most popular attractie countrys in horn of Africa  to visit in your lifetime</H1> 
+           <h2 id="heading">Countries</h2>
                <h3 class="crt">Ehiopia</h3>
                 <h3 class="crt">Ertiria</h3>
                 <h3 class="crt">kenya</h3>
